# quartz-server-python

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  hello.py  main.py  pyproject.toml
app/: crud.py  models.py  schemas.py
app/api/: a.json  ai.py  main.py  notes.py  users.py
app/core/: config.py  db.py  security.py
app/services/: ai.py  instructions.py
