[project]
name = "quartz-server-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "fastapi[standard]>=0.115.6",
    "google-generativeai>=0.8.4",
    "grpcio==1.67.1",
    "grpcio-status==1.67.1",
    "jwt>=1.3.1",
    "pydantic>=2.10.4",
    "pydantic-core>=2.27.2",
    "pydantic-settings>=2.7.1",
    "sqlmodel>=0.0.22",
    "typing>=3.10.0.0",
]
